# FRET_Embedlab

./: .gitignore  CMakeLists.txt  README.md  oli  setup.sh
cmake/: ConfigTesting.cmake  TestsFRET_Embedlab.cmake  TestsFretLab.cmake
examples/: input.inp
src/: CMakeLists.txt  FRET_Embedlab.f90  FretLab.f90
src/algorithm/: algorithm_module.f90  density.f90
src/density/: density.f90  integrals.f90  template.f90
src/density_nanoparticle/: .density.f90.swp  density.f90  integrals.f90  nanoparticle.f90  solvent.f90
src/erase/: Makefile  cubes.mod  delta_q.csv  kinds.mod
src/erase/security/security/: Makefile  cda.f95  cubes.f95  cubes.mod
src/input_output/: input_module.f90  output_module.f90
src/python/: field_on_xyz_grid.py  geom.py  spectral_overlap_adf.py
src/python/create-3d-inputs/create-full-3d-around-Y/: README
src/python/create-3d-inputs/create-full-3d-around-Y/create_grid/: create_structures_full_grid.sh
src/python/create-radial-grid/create-radial-grid-around-Z/: README
src/python/create-radial-grid/create-radial-grid-around-Z/create_grid/: .create_structures-radial_grid_Z.sh.swp  create_structures-radial_grid_Z.sh  cto_r30.xyz  log
src/python/field_on_xyz_grid/: field_on_xyz_grid.py
src/python/field_on_xyz_grid/grid-field-creation-1-mol-around-Y/create_grid/: README  create_structures_full_grid.sh  cto_r30.xyz  input_angle
src/python/field_on_xyz_grid/grid-field-creation-1-mol-around-Y/field/: field.pqr  grid.xyz
src/python/field_on_xyz_grid/grid-field-creation-3d-around-Y/: README
src/python/field_on_xyz_grid/grid-field-creation-3d-around-Y/create_grid/: create_structures_full_grid.sh  log
src/python/field_on_xyz_grid/grid-field-creation-3d-around-Y/field/: field.pqr  grid.xyz
src/tools/: .nfs0000000a9d856205000078cd  parallel_module.f90  parameters_module.f90  string_manipulation_module.f90  time_module.f90
tests/: input_example_all_options.inp  runtest_config.py
tests/acceptor_donor_coulomb/: acceptor_donor_coulomb.inp  test
tests/acceptor_donor_with_overlap_integral/: acceptor_donor_with_overlap_integral.inp  test
tests/acceptor_np_charges/: acceptor_np_charges.inp  test
tests/acceptor_np_charges_dipoles_donor_coulomb/: acceptor_np_charges_dipoles_donor_coulomb.inp  test
tests/acceptor_np_charges_donor_coulomb/: acceptor_np_charges_donor_coulomb.inp  test
tests/acceptor_np_charges_donor_cutoff_10E-02/: test
tests/acceptor_np_charges_donor_with_overlap_integral/: acceptor_np_charges_donor_with_overlap_integral.inp  test
tests/input_example_all_options/: input.inp
tests/integrate_density/: test
tests/pdi_bem_pdi_cut_10E-02/: pdi_bem_pdi_cut_10E-02.inp  test
tests/pdi_bem_pdi_cut_10E-05/: input_coarse_e-02.inp
tests/pdi_bem_pdi_cut_10E-20/: input_coarse_e-02.inp
(+3766 files in other folders)
